Change name to some images

--- a/front/src/app/components/public/credit-service/credit-service.component.html
+++ b/front/src/app/components/public/credit-service/credit-service.component.html
@@ -587,7 +587,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDIFACIL'" class="credit-line">
-                                <img src="../../../assets/femseapto/ahorroNavideño.webp" alt="CREDITO CREDIFACIL" class="img-fluid">
+                                <img src="../../../assets/femseapto/ahorroNavidenio.webp" alt="CREDITO CREDIFACIL" class="img-fluid">
                                 <h3>CREDITO CREDIFACIL</h3>
                                 <h5>El crédito CrediFacil, será destinado para los nuevos asociados que se vinculen a través del programa SEAPTO Soluciones al instante, el cual tendrá las siguientes condiciones:</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -636,7 +636,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDICUMPLEAÑOS'" class="credit-line">
-                                <img src="../../../assets/femseapto/cumpleaños.webp" alt="CREDITO CREDICUMPLEAÑOS" class="img-fluid">
+                                <img src="../../../assets/femseapto/cumpleanios.webp" alt="CREDITO CREDICUMPLEAÑOS" class="img-fluid">
                                 <h3>CREDITO CREDICUMPLEAÑOS</h3>
                                 <h5>Crédito que el asociado podrá solicitar en el mes de su cumpleaños, para libre destinación.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
