--- a/front/src/app/components/public/home/components/saving-service-home/saving-service-home.component.html
+++ b/front/src/app/components/public/home/components/saving-service-home/saving-service-home.component.html
@@ -18,7 +18,7 @@
     <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
-          <img src="../../../../../assets/femseapto/ahorroNavideño.webp" class="card-img-top img-custom" alt="...">
+          <img src="../../../../../assets/femseapto/ahorroNavidenio.webp" class="card-img-top img-custom" alt="...">
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
