--- a/front/src/app/components/public/saving-service/saving-service.component.html
+++ b/front/src/app/components/public/saving-service/saving-service.component.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div *ngIf="selectedSavingLine === 'AHORRO NAVIDEÑO'" class="saving-line">
-                    <img src="../../../assets/femseapto/ahorroNavideño.webp" alt="Ahorro Navideño" class="img-fluid">
+                    <img src="../../../assets/femseapto/ahorroNavidenio.webp" alt="Ahorro Navideño" class="img-fluid">
                     <h3>AHORRO NAVIDEÑO</h3>
                     <h5>El Ahorro Navideño está pensado para ayudar a los asociados a enfrentar los gastos típicos de la
                         temporada decembrina.</h5>
