Fix birth place in components

--- a/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
@@ -19,7 +19,7 @@
       <input formControlName="numeroCuentaBanc" type="text" class="form-control" />
     </div>
     <div class="col-md-6">
-      <label for="ingresosMensuales" class="form-label">Ingresos Mensuales</label>
+      <label for="ingresosMensuales" class="form-label">Salario Básico</label>
       <div class="input-group mb-3">
         <span class="input-group-text">$</span>
         <input 
