Add required asterisk in natural person component

--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.css
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.css
@@ -17,3 +17,9 @@ h5 {
         transform: rotate(360deg);
     }
 }
+
+.required-label::after {
+    content: " *";
+    color: red;
+    margin-left: 1px;
+}
