--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -6,7 +6,7 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="idGenero" class="form-label">Género</label>
+          <label for="idGenero" class="form-label required-label">Género</label>
           <select class="form-select" formControlName="idGenero">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of genders" [value]="type.id">
@@ -15,7 +15,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="idEstadoCivil" class="form-label">Estado Civil</label>
+          <label for="idEstadoCivil" class="form-label required-label">Estado Civil</label>
           <select class="form-select" formControlName="idEstadoCivil">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of maritalStatus" [value]="type.id">
@@ -24,11 +24,11 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="fechaExpDoc" class="form-label">Fecha de expedición de documento</label>
+          <label for="fechaExpDoc" class="form-label required-label">Fecha de expedición de documento</label>
           <input formControlName="fechaExpDoc" type="date" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="idDeptoExpDoc" class="form-label">Departamento de expedición del documento</label>
+          <label for="idDeptoExpDoc" class="form-label required-label">Departamento de expedición del documento</label>
           <select class="form-select" id="idDeptoExpDoc" formControlName="idDeptoExpDoc" (change)="onDepartamentoChange('idDeptoExpDoc')">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let department of departments" [value]="department.id">
@@ -37,7 +37,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="mpioExpDoc" class="form-label">Municipio de expedición del documento</label>
+          <label for="mpioExpDoc" class="form-label required-label">Municipio de expedición del documento</label>
           <select class="form-select" id="mpioExpDoc" formControlName="mpioExpDoc">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let city of citiesExpDoc" [value]="city.id">
@@ -53,11 +53,11 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="fechaNacimiento" class="form-label">Fecha de nacimiento</label>
+          <label for="fechaNacimiento" class="form-label required-label">Fecha de nacimiento</label>
           <input formControlName="fechaNacimiento" type="date" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="paisNacimiento" class="form-label">País de nacimiento</label>
+          <label for="paisNacimiento" class="form-label required-label">País de nacimiento</label>
           <select class="form-select" formControlName="paisNacimiento" (change)="onPaisNacimientoChange()">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of countries" [value]="type.id">
@@ -66,7 +66,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="idDeptoNacimiento" class="form-label">Departamento de nacimiento</label>
+          <label for="idDeptoNacimiento" class="form-label required-label">Departamento de nacimiento</label>
           <select class="form-select" formControlName="idDeptoNacimiento" (change)="onDepartamentoChange('idDeptoNacimiento')">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let dpto of departments" [value]="dpto.id">
@@ -75,7 +75,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="mpioNacimiento" class="form-label">Municipio de nacimiento</label>
+          <label for="mpioNacimiento" class="form-label required-label">Municipio de nacimiento</label>
           <select class="form-select" formControlName="mpioNacimiento" (change)="onSelectChange($event)">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let city of citiesNac" [value]="city.id">
@@ -84,7 +84,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="otroLugarNacimiento" class="form-label">Lugar de nacimiento</label>
+          <label for="otroLugarNacimiento" class="form-label required-label">Lugar de nacimiento</label>
           <input formControlName="otroLugarNacimiento" type="text" class="form-control"/>
         </div>
       </div>
@@ -95,7 +95,7 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="idDeptoResidencia" class="form-label">Departamento de residencia</label>
+          <label for="idDeptoResidencia" class="form-label required-label">Departamento de residencia</label>
           <select class="form-select" formControlName="idDeptoResidencia" (change)="onDepartamentoChange('idDeptoResidencia')">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let dpto of departments" [value]="dpto.id">
@@ -104,7 +104,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="mpioResidencia" class="form-label">Municipio de residencia</label>
+          <label for="mpioResidencia" class="form-label required-label">Municipio de residencia</label>
           <select class="form-select" formControlName="mpioResidencia">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let city of citiesRes" [value]="city.id">
@@ -113,7 +113,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="idZonaResidencia" class="form-label">Zona de residencia</label>
+          <label for="idZonaResidencia" class="form-label required-label">Zona de residencia</label>
           <select class="form-select" formControlName="idZonaResidencia">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of zones" [value]="type.id">
@@ -122,7 +122,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="idTipoVivienda" class="form-label">Tipo de vivienda de residencia</label>
+          <label for="idTipoVivienda" class="form-label required-label">Tipo de vivienda de residencia</label>
           <select class="form-select" formControlName="idTipoVivienda">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of houseTypes" [value]="type.id">
@@ -131,7 +131,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="estrato" class="form-label">Estrato</label>
+          <label for="estrato" class="form-label required-label">Estrato</label>
           <select class="form-select" formControlName="estrato">
             <option value="" selected>Seleccione...</option>
             <option value="1">Estrato 1</option>
@@ -143,11 +143,11 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="direccionResidencia" class="form-label">Dirección de residencia</label>
+          <label for="direccionResidencia" class="form-label required-label">Dirección de residencia</label>
           <input formControlName="direccionResidencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="duracionAntigVivienda" class="form-label">Antigüedad en la vivienda de residencia</label>
+          <label for="duracionAntigVivienda" class="form-label required-label">Antigüedad en la vivienda de residencia</label>
           <div class="input-group mb-3">
             <input type="number" class="form-control" formControlName="duracionAntigVivienda">
             <select class="form-select" style="max-width: 220px;" formControlName="periodoAntigVivienda">
@@ -165,7 +165,7 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="cabezaFamilia" class="form-label">¿Es cabeza de familia?</label>
+          <label for="cabezaFamilia" class="form-label required-label">¿Es cabeza de familia?</label>
           <select class="form-select" formControlName="cabezaFamilia">
             <option value="" selected>Seleccione...</option>
             <option value="SI">Sí</option>
@@ -173,11 +173,11 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="personasACargo" class="form-label">Número de personas a cargo</label>
+          <label for="personasACargo" class="form-label required-label">Número de personas a cargo</label>
           <input formControlName="personasACargo" type="number" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="tieneHijos" class="form-label">¿Tiene hijos?</label>
+          <label for="tieneHijos" class="form-label required-label">¿Tiene hijos?</label>
           <select class="form-select" formControlName="tieneHijos">
             <option value="" selected>Seleccione...</option>
             <option value="SI">Sí</option>
@@ -185,7 +185,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="numeroHijos" class="form-label">Número de hijos</label>
+          <label for="numeroHijos" class="form-label required-label">Número de hijos</label>
           <input formControlName="numeroHijos" type="number" class="form-control" />
         </div>
       </div>
@@ -196,7 +196,7 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="correoElectronico" class="form-label">Correo electrónico</label>
+          <label for="correoElectronico" class="form-label required-label">Correo electrónico</label>
           <input formControlName="correoElectronico" type="email" class="form-control" />
         </div>
         <div class="col-md-6">
@@ -204,7 +204,7 @@
           <input formControlName="telefono" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
         <div class="col-md-6">
-          <label for="celular" class="form-label">Número de celular</label>
+          <label for="celular" class="form-label required-label">Número de celular</label>
           <input formControlName="celular" type="text" minlength="7" maxlength="10" class="form-control"/>
         </div>
         <div class="col-md-6">
@@ -219,7 +219,7 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="idNivelEducativo" class="form-label">Nivel de educación</label>
+          <label for="idNivelEducativo" class="form-label required-label">Nivel de educación</label>
           <select class="form-select" formControlName="idNivelEducativo">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of educationLevels" [value]="type.id">
@@ -228,15 +228,15 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="profesion" class="form-label">Profesión</label>
+          <label for="profesion" class="form-label required-label">Profesión</label>
           <input formControlName="profesion" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="ocupacionOficio" class="form-label">Ocupación u oficio</label>
+          <label for="ocupacionOficio" class="form-label required-label">Ocupación u oficio</label>
           <input formControlName="ocupacionOficio" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="idEmpresaLabor" class="form-label">Empresa donde labora</label>
+          <label for="idEmpresaLabor" class="form-label required-label">Empresa donde labora</label>
           <select class="form-select" formControlName="idEmpresaLabor">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of companies" [value]="type.id">
@@ -245,7 +245,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="idTipoContrato" class="form-label">Tipo de contrato</label>
+          <label for="idTipoContrato" class="form-label required-label">Tipo de contrato</label>
           <select class="form-select" formControlName="idTipoContrato">
             <option value="" selected>Seleccione...</option>
             <option *ngFor="let type of contractTypes" [value]="type.id">
@@ -254,21 +254,21 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="dependenciaEmpresa" class="form-label">Dependencia a la que hace parte</label>
+          <label for="dependenciaEmpresa" class="form-label required-label">Dependencia a la que hace parte</label>
           <input formControlName="dependenciaEmpresa" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="cargoOcupa" class="form-label">Cargo que ocupa</label>
+          <label for="cargoOcupa" class="form-label required-label">Cargo que ocupa</label>
           <input formControlName="cargoOcupa" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="jefeInmediato" class="form-label">Nombre del jefe inmediato</label>
+          <label for="jefeInmediato" class="form-label required-label">Nombre del jefe inmediato</label>
           <input formControlName="jefeInmediato" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="duracionAntigEmpresa" class="form-label">Antigüedad en la empresa</label>
+          <label for="duracionAntigEmpresa" class="form-label required-label">Antigüedad en la empresa</label>
           <div class="input-group mb-3">
-            <input type="number" class="form-control" formControlName="duracionAntigEmpresa">
+            <input type="number" class="form-control required-label" formControlName="duracionAntigEmpresa">
             <select class="form-select" style="max-width: 220px;" formControlName="periodoAntigEmpresa">
               <option value="" selected disabled>Seleccione Periodo...</option>
               <option value="Años">Años</option>
@@ -281,7 +281,7 @@
           <input formControlName="mesesAntigEmpresa" type="number" class="form-control" />
         </div>-->
         <div class="col-md-6">
-          <label for="mesSaleVacaciones" class="form-label">Mes en el que sale a vacaciones</label>
+          <label for="mesSaleVacaciones" class="form-label required-label">Mes en el que sale a vacaciones</label>
           <input formControlName="mesSaleVacaciones" type="text" class="form-control" />
         </div>
       </div>
@@ -292,15 +292,15 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="nombreEmergencia" class="form-label">Nombre completo</label>
+          <label for="nombreEmergencia" class="form-label required-label">Nombre completo</label>
           <input formControlName="nombreEmergencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="numeroCedulaEmergencia" class="form-label">Número de documento</label>
+          <label for="numeroCedulaEmergencia" class="form-label required-label">Número de documento</label>
           <input formControlName="numeroCedulaEmergencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="numeroCelularEmergencia" class="form-label">Número de celular</label>
+          <label for="numeroCelularEmergencia" class="form-label required-label">Número de celular</label>
           <input formControlName="numeroCelularEmergencia" type="text" minlength="7" maxlength="10" class="form-control" />
         </div>
       </div>
