--- a/front/src/app/components/private/user/components/user-info/components/public-person/public-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/public-person/public-person.component.html
@@ -3,7 +3,7 @@
   <div class="row g-3">
     <input type="hidden" formControlName="id" />
     <div class="col-md-6">
-      <label for="poderPublico" class="form-label"
+      <label for="poderPublico" class="form-label required-label"
         >¿Ejerce algún grado de poder público?</label
       >
       <br>
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="col-md-6">
-        <label for="manejaRecPublicos" class="form-label"
+        <label for="manejaRecPublicos" class="form-label required-label"
           >¿Maneja recursos públicos?</label
         >
         <br>
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <label for="reconocimientoPublico" class="form-label"
+        <label for="reconocimientoPublico" class="form-label required-label"
           >¿Goza usted de reconocimiento público?</label
         >
         <br>
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <label for="funcionesPublicas" class="form-label"
+        <label for="funcionesPublicas" class="form-label required-label"
           >¿Ejerce alguna actividad o desarrolla funciones públicas?</label
         >
         <br>
@@ -85,7 +85,7 @@
       />
     </div>
     <div class="col-md-6">
-        <label for="funcionarioPublicoExtranjero" class="form-label"
+        <label for="funcionarioPublicoExtranjero" class="form-label required-label"
           >¿Es usted un funcionario público extranjero?</label
         >
         <br>
@@ -103,7 +103,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <label for="famFuncionarioPublico" class="form-label"
+        <label for="famFuncionarioPublico" class="form-label required-label"
           >¿Es usted familiar de un funcionario público?</label
         >
         <br>
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <label for="socioFuncionarioPublico" class="form-label"
+        <label for="socioFuncionarioPublico" class="form-label required-label"
           >¿Es usted socio de un funcionario público?</label
         >
         <br>
