--- a/front/src/app/components/private/user/components/user-info/user-info.component.css
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.css
@@ -2,3 +2,9 @@ h1 {
     color: #00823d;
     font-weight: bold;
 }
+
+.required-label::after {
+    content: " *";
+    color: red;
+    margin-left: 1px;
+}
