--- a/front/src/app/components/private/user/components/user-info/components/international-transactions/international-transactions.component.css
+++ b/front/src/app/components/private/user/components/user-info/components/international-transactions/international-transactions.component.css
@@ -12,3 +12,9 @@
         transform: rotate(360deg);
     }
 }
+
+.required-label::after {
+    content: " *";
+    color: red;
+    margin-left: 1px;
+}
