--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="accordion-item">
+    <div id="contact-section" class="accordion-item">
       <h2 class="accordion-header">
         <button
           class="accordion-button"
@@ -37,7 +37,7 @@
           aria-expanded="true"
           aria-controls="collapseContact"
         >
-          Información de Contacto (Ley 2300)
+          Autorización de Contacto (Ley 2300)
         </button>
       </h2>
       <div
