Add info to user report

--- a/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.html
+++ b/front/src/app/components/private/admin/users-report/components/users-search/users-search.component.html
@@ -25,7 +25,7 @@
                 <strong>Número de documento:</strong> {{ user.numeroDocumento }}
             </p>
             <button class="btn btn-success" (click)="generateExcelForUser()" [disabled]="isLoading">
-                {{ isLoading ? 'Generando Excel...' : 'Generar Excel' }}
+                {{ isLoading ? 'Generando archivo...' : 'Generar archivo' }}
             </button>
         </div>
     </div>
