update buttons color in welcome pages

--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -14,8 +14,8 @@
                 </h4>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los Servicios de Crédito</h5>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/credit">Solicitar crédito</a>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits/balance">Consultar saldos de crédito</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/user/request/credit">Solicitar crédito</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/user/credits/balance">Consultar saldos de crédito</a>
                     <!-- <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits">Mi historial</a> -->
                 </div>
             </div>
@@ -32,15 +32,15 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="d-grid gap-2">
-                                <a class="btn btn-primary" routerLink="/auth/user/request/saving">Solicitar nuevo ahorro</a>
-                                <a class="btn btn-primary" routerLink="/auth/user/request/saving-withdrawal">Solicitar retiro de ahorros</a>
-                                <a class="btn btn-primary" routerLink="/auth/user/request/saving-history">Historial de solicitudes</a>
+                                <a class="btn btn-success" routerLink="/auth/user/request/saving">Solicitar nuevo ahorro</a>
+                                <a class="btn btn-success" routerLink="/auth/user/request/saving-withdrawal">Solicitar retiro de ahorros</a>
+                                <a class="btn btn-success" routerLink="/auth/user/request/saving-history">Historial de solicitudes</a>
                             </div>    
                         </div>
                         <div class="col-md-6 mt-2">
                             <div class="d-grid gap-2">
-                                <a class="btn btn-primary" routerLink="/auth/user/savings/balance">Consultar saldo de ahorros</a>
-                                <a class="btn btn-primary" routerLink="/auth/user/savings/required-balance">Consultar saldo de ahorros obligatorios</a>
+                                <a class="btn btn-success" routerLink="/auth/user/savings/balance">Consultar saldo de ahorros</a>
+                                <a class="btn btn-success" routerLink="/auth/user/savings/required-balance">Consultar saldo de ahorros obligatorios</a>
                             </div>           
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                 </h4>
                 <div class="card-body">
                     <h5 class="card-title">Datos Personales</h5>
-                    <a routerLink="/auth/user/information" class="btn btn-primary">Actualizar datos generales</a>
+                    <a routerLink="/auth/user/information" class="btn btn-success">Actualizar datos generales</a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
                 </h4>
                 <div class="card-body ">
                     <h5 class="card-title">Cambiar contraseña</h5>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/settings">Ir a los ajustes de la cuenta</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/settings">Ir a los ajustes de la cuenta</a>
                 </div>
             </div>
         </div>
