--- a/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
+++ b/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
@@ -12,7 +12,7 @@
                     Servicios de Crédito
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/credits">Revisar solicitudes de crédito</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/credits">Revisar solicitudes de crédito</a>
                 </div>
             </div>
         </div>
@@ -24,8 +24,8 @@
                     Servicios de Ahorro
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/savings">Revisar solicitudes de ahorro</a>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/savings-withdrawals">Revisar solicitudes de retiro de ahorro</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/savings">Revisar solicitudes de ahorro</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/savings-withdrawals">Revisar solicitudes de retiro de ahorro</a>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                     Reportes
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/reports">Descargar datos de asociados</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/reports">Descargar datos de asociados</a>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
                     Gestión de Usuarios
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/manage/executive">Administrar usuarios</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/manage/executive">Administrar usuarios</a>
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
                     Cargue de Archivos Planos
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/upload-data">Subir archivos planos</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/upload-data">Subir archivos planos</a>
                 </div>
             </div>
         </div>
@@ -73,8 +73,8 @@
                     Informes, Actas de Junta y Comité
                 </h4>
                 <div class="card-body d-flex justify-content-center align-items-center">
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/upload">Subir informes y actas</a>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/download">Descargar informes y actas</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/upload">Subir informes y actas</a>
+                    <a class="btn btn-success me-2 mb-1" routerLink="/auth/admin/download">Descargar informes y actas</a>
                 </div>
             </div>
         </div>
