Change color in many buttons

--- a/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
@@ -12,7 +12,7 @@
       <p>Por favor, agregue o asegúrese de tener al menos una referencia familiar y una referencia personal.</p>
       <app-recommendation></app-recommendation>
 
-      <button class="btn btn-primary m-3" (click)="nextSection()">
+      <button class="btn btn-success m-3" (click)="nextSection()">
         Siguiente
       </button>
     </div>
@@ -171,8 +171,8 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary m-1" (click)="prevSection()">Atrás</button>
-      <button class="btn btn-primary m-1" (click)="nextSection()">
+      <button class="btn btn-success m-1" (click)="prevSection()">Atrás</button>
+      <button class="btn btn-success m-1" (click)="nextSection()">
         Siguiente
       </button>
     </div>
@@ -311,8 +311,8 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary m-1" (click)="prevSection()">Atrás</button>
-      <button class="btn btn-primary m-1" (click)="nextSection()">
+      <button class="btn btn-success m-1" (click)="prevSection()">Atrás</button>
+      <button class="btn btn-success m-1" (click)="nextSection()">
         Siguiente
       </button>
     </div>
@@ -481,7 +481,7 @@
 
       <p>Para solicitar un crédito, primero asegúrese de presionar el botón de "Guardar" si ha realizado alguna edición o actualización en cualquier campo. Esto es importante porque la información actualizada será utilizada para el estudio de su solicitud de crédito. Luego, proceda a solicitar el crédito.</p>
 
-      <button class="btn btn-primary m-1" (click)="prevSection()">Atrás</button>
+      <button class="btn btn-success m-1" (click)="prevSection()">Atrás</button>
       <button
         class="btn btn-success m-1"
         [disabled]="infoForm.invalid || isSubmitting"
