--- a/front/src/app/components/private/user/request/request-credit/request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/request-credit.component.html
@@ -110,7 +110,7 @@
         <div class="col-12">
           <button
             type="submit"
-            class="btn btn-primary"
+            class="btn btn-success"
             [disabled]="creditForm.invalid || isAdditionalDisabled || isSubmitting"
           >
             <span *ngIf="!isSubmitting">Enviar Solicitud</span>
