--- a/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
@@ -3,7 +3,7 @@
   <!-- Button trigger modal -->
   <button
     type="button"
-    class="btn btn-primary m-2"
+    class="btn btn-success m-2"
     data-bs-toggle="modal"
     data-bs-target="#exampleModal"
   >
